--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@strapi/plugin-cloud": "4.21.0",
     "@strapi/plugin-i18n": "4.21.0",
     "@strapi/plugin-users-permissions": "4.21.0",
+    "@strapi/provider-upload-cloudinary": "^4.22.0",
     "@strapi/strapi": "4.21.0",
     "better-sqlite3": "8.6.0",
     "pg": "^8.11.5",
